# 3D-experiment

./: .gitignore  CMakeLists.txt  LICENSE  README.md
BulletPhysics/: CMakeLists.txt
Ogre/: CMakeLists.txt
btogre/: CMakeLists.txt
src/: BaseApplication.cpp  BaseApplication.h  TutorialApplication.cpp  TutorialApplication.h  gamecamera.cc  gamecamera.h  gameobject.cc  gameobject.h  physicsmanager.cc  physicsmanager.h
